libqt6c/src/libqwidget.hpp

typedef struct QCursor QCursor;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QIcon QIcon;
typedef struct QKeySequence QKeySequence;
typedef struct QLocale QLocale;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QWidget QWidget;
void QWidget_GrabGesture(QWidget* self, int type);
void QWidget_UngrabGesture(QWidget* self, int type);
void QWidget_SetWindowTitle(QWidget* self, const libqt_string windowTitle);
void QWidget_SetStyleSheet(QWidget* self, const libqt_string styleSheet);
libqt_string QWidget_StyleSheet(const QWidget* self);
libqt_string QWidget_WindowTitle(const QWidget* self);
void QWidget_SetWindowIcon(QWidget* self, const QIcon* icon);
QIcon* QWidget_WindowIcon(const QWidget* self);
void QWidget_SetWindowIconText(QWidget* self, const libqt_string windowIconText);
libqt_string QWidget_WindowIconText(const QWidget* self);
void QWidget_SetWindowRole(QWidget* self, const libqt_string windowRole);
libqt_string QWidget_WindowRole(const QWidget* self);
void QWidget_SetWindowFilePath(QWidget* self, const libqt_string filePath);
libqt_string QWidget_WindowFilePath(const QWidget* self);
void QWidget_SetWindowOpacity(QWidget* self, double level);
double QWidget_WindowOpacity(const QWidget* self);
bool QWidget_IsWindowModified(const QWidget* self);
void QWidget_SetToolTip(QWidget* self, const libqt_string toolTip);
libqt_string QWidget_ToolTip(const QWidget* self);
void QWidget_SetToolTipDuration(QWidget* self, int msec);
int QWidget_ToolTipDuration(const QWidget* self);
void QWidget_SetStatusTip(QWidget* self, const libqt_string statusTip);
libqt_string QWidget_StatusTip(const QWidget* self);
void QWidget_SetWhatsThis(QWidget* self, const libqt_string whatsThis);
libqt_string QWidget_WhatsThis(const QWidget* self);
libqt_string QWidget_AccessibleName(const QWidget* self);
void QWidget_SetAccessibleName(QWidget* self, const libqt_string name);
libqt_string QWidget_AccessibleDescription(const QWidget* self);
void QWidget_SetAccessibleDescription(QWidget* self, const libqt_string description);
void QWidget_SetLayoutDirection(QWidget* self, int direction);
int QWidget_LayoutDirection(const QWidget* self);
void QWidget_UnsetLayoutDirection(QWidget* self);
void QWidget_SetLocale(QWidget* self, const QLocale* locale);
QLocale* QWidget_Locale(const QWidget* self);
void QWidget_UnsetLocale(QWidget* self);
bool QWidget_IsRightToLeft(const QWidget* self);
bool QWidget_IsLeftToRight(const QWidget* self);
void QWidget_SetFocus(QWidget* self);
bool QWidget_IsActiveWindow(const QWidget* self);
void QWidget_ActivateWindow(QWidget* self);
void QWidget_ClearFocus(QWidget* self);
void QWidget_SetFocus2(QWidget* self, int reason);
int QWidget_FocusPolicy(const QWidget* self);
void QWidget_SetFocusPolicy(QWidget* self, int policy);
bool QWidget_HasFocus(const QWidget* self);
void QWidget_SetTabOrder(QWidget* param1, QWidget* param2);
void QWidget_SetFocusProxy(QWidget* self, QWidget* focusProxy);
QWidget* QWidget_FocusProxy(const QWidget* self);
int QWidget_ContextMenuPolicy(const QWidget* self);
void QWidget_SetContextMenuPolicy(QWidget* self, int policy);
void QWidget_GrabMouse(QWidget* self);
void QWidget_GrabMouse2(QWidget* self, const QCursor* param1);
void QWidget_ReleaseMouse(QWidget* self);
void QWidget_GrabKeyboard(QWidget* self);
void QWidget_ReleaseKeyboard(QWidget* self);
int QWidget_GrabShortcut(QWidget* self, const QKeySequence* key);
void QWidget_ReleaseShortcut(QWidget* self, int id);
void QWidget_SetShortcutEnabled(QWidget* self, int id);
void QWidget_SetShortcutAutoRepeat(QWidget* self, int id);
QWidget* QWidget_MouseGrabber();
QWidget* QWidget_KeyboardGrabber();
bool QWidget_UpdatesEnabled(const QWidget* self);
void QWidget_SetUpdatesEnabled(QWidget* self, bool enable);
QGraphicsProxyWidget* QWidget_GraphicsProxyWidget(const QWidget* self);
void QWidget_Update(QWidget* self);
void QWidget_Repaint(QWidget* self);
void QWidget_Update2(QWidget* self, int x, int y, int w, int h);
void QWidget_Update3(QWidget* self, const QRect* param1);
void QWidget_Update4(QWidget* self, const QRegion* param1);
void QWidget_Repaint2(QWidget* self, int x, int y, int w, int h);
void QWidget_Repaint3(QWidget* self, const QRect* param1);
void QWidget_Repaint4(QWidget* self, const QRegion* param1);
void QWidget_SetVisible(QWidget* self, bool visible);
void QWidget_SetHidden(QWidget* self, bool hidden);
void QWidget_Show(QWidget* self);
void QWidget_Hide(QWidget* self);
void QWidget_ShowMinimized(QWidget* self);
void QWidget_ShowMaximized(QWidget* self);
void QWidget_ShowFullScreen(QWidget* self);
void QWidget_ShowNormal(QWidget* self);
bool QWidget_Close(QWidget* self);
void QWidget_Raise(QWidget* self);
void QWidget_Lower(QWidget* self);
void QWidget_StackUnder(QWidget* self, QWidget* param1);
void QWidget_Move(QWidget* self, int x, int y);
void QWidget_Move2(QWidget* self, const QPoint* param1);
void QWidget_Resize(QWidget* self, int w, int h);
void QWidget_Resize2(QWidget* self, const QSize* param1);
void QWidget_SetGeometry(QWidget* self, int x, int y, int w, int h);
void QWidget_SetGeometry2(QWidget* self, const QRect* geometry);
libqt_string QWidget_SaveGeometry(const QWidget* self);
bool QWidget_RestoreGeometry(QWidget* self, const libqt_string geometry);
void QWidget_AdjustSize(QWidget* self);
bool QWidget_IsVisible(const QWidget* self);
bool QWidget_IsVisibleTo(const QWidget* self, const QWidget* param1);
bool QWidget_IsHidden(const QWidget* self);
bool QWidget_IsMinimized(const QWidget* self);
bool QWidget_IsMaximized(const QWidget* self);
bool QWidget_IsFullScreen(const QWidget* self);
int QWidget_WindowState(const QWidget* self);
void QWidget_SetWindowState(QWidget* self, int state);
void QWidget_OverrideWindowState(QWidget* self, int state);
QSize* QWidget_SizeHint(const QWidget* self);
QSize* QWidget_MinimumSizeHint(const QWidget* self);