QtBeef/src/Qt/qwidget.bf

	[LinkName("QWidget_GrabGesture")]
	public static extern void QWidget_GrabGesture(QWidget_Ptr* self, Qt_GestureType type);
	[LinkName("QWidget_UngrabGesture")]
	public static extern void QWidget_UngrabGesture(QWidget_Ptr* self, Qt_GestureType type);
	[LinkName("QWidget_SetWindowTitle")]
	public static extern void QWidget_SetWindowTitle(QWidget_Ptr* self, libqt_string* windowTitle);
	[LinkName("QWidget_SetStyleSheet")]
	public static extern void QWidget_SetStyleSheet(QWidget_Ptr* self, libqt_string* styleSheet);
	[LinkName("QWidget_StyleSheet")]
	public static extern libqt_string QWidget_StyleSheet(QWidget_Ptr* self);
	[LinkName("QWidget_WindowTitle")]
	public static extern libqt_string QWidget_WindowTitle(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowIcon")]
	public static extern void QWidget_SetWindowIcon(QWidget_Ptr* self, QIcon_Ptr* icon);
	[LinkName("QWidget_WindowIcon")]
	public static extern QIcon_Ptr QWidget_WindowIcon(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowIconText")]
	public static extern void QWidget_SetWindowIconText(QWidget_Ptr* self, libqt_string* windowIconText);
	[LinkName("QWidget_WindowIconText")]
	public static extern libqt_string QWidget_WindowIconText(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowRole")]
	public static extern void QWidget_SetWindowRole(QWidget_Ptr* self, libqt_string* windowRole);
	[LinkName("QWidget_WindowRole")]
	public static extern libqt_string QWidget_WindowRole(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowFilePath")]
	public static extern void QWidget_SetWindowFilePath(QWidget_Ptr* self, libqt_string* filePath);
	[LinkName("QWidget_WindowFilePath")]
	public static extern libqt_string QWidget_WindowFilePath(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowOpacity")]
	public static extern void QWidget_SetWindowOpacity(QWidget_Ptr* self, double level);
	[LinkName("QWidget_WindowOpacity")]
	public static extern double QWidget_WindowOpacity(QWidget_Ptr* self);
	[LinkName("QWidget_IsWindowModified")]
	public static extern bool QWidget_IsWindowModified(QWidget_Ptr* self);
	[LinkName("QWidget_SetToolTip")]
	public static extern void QWidget_SetToolTip(QWidget_Ptr* self, libqt_string* toolTip);
	[LinkName("QWidget_ToolTip")]
	public static extern libqt_string QWidget_ToolTip(QWidget_Ptr* self);
	[LinkName("QWidget_SetToolTipDuration")]
	public static extern void QWidget_SetToolTipDuration(QWidget_Ptr* self, c_int msec);
	[LinkName("QWidget_ToolTipDuration")]
	public static extern c_int QWidget_ToolTipDuration(QWidget_Ptr* self);
	[LinkName("QWidget_SetStatusTip")]
	public static extern void QWidget_SetStatusTip(QWidget_Ptr* self, libqt_string* statusTip);
	[LinkName("QWidget_StatusTip")]
	public static extern libqt_string QWidget_StatusTip(QWidget_Ptr* self);
	[LinkName("QWidget_SetWhatsThis")]
	public static extern void QWidget_SetWhatsThis(QWidget_Ptr* self, libqt_string* whatsThis);
	[LinkName("QWidget_WhatsThis")]
	public static extern libqt_string QWidget_WhatsThis(QWidget_Ptr* self);
	[LinkName("QWidget_AccessibleName")]
	public static extern libqt_string QWidget_AccessibleName(QWidget_Ptr* self);
	[LinkName("QWidget_SetAccessibleName")]
	public static extern void QWidget_SetAccessibleName(QWidget_Ptr* self, libqt_string* name);
	[LinkName("QWidget_AccessibleDescription")]
	public static extern libqt_string QWidget_AccessibleDescription(QWidget_Ptr* self);
	[LinkName("QWidget_SetAccessibleDescription")]
	public static extern void QWidget_SetAccessibleDescription(QWidget_Ptr* self, libqt_string* description);
	[LinkName("QWidget_SetLayoutDirection")]
	public static extern void QWidget_SetLayoutDirection(QWidget_Ptr* self, Qt_LayoutDirection direction);
	[LinkName("QWidget_LayoutDirection")]
	public static extern Qt_LayoutDirection QWidget_LayoutDirection(QWidget_Ptr* self);
	[LinkName("QWidget_UnsetLayoutDirection")]
	public static extern void QWidget_UnsetLayoutDirection(QWidget_Ptr* self);
	[LinkName("QWidget_SetLocale")]
	public static extern void QWidget_SetLocale(QWidget_Ptr* self, QLocale_Ptr* locale);
	[LinkName("QWidget_Locale")]
	public static extern QLocale_Ptr QWidget_Locale(QWidget_Ptr* self);
	[LinkName("QWidget_UnsetLocale")]
	public static extern void QWidget_UnsetLocale(QWidget_Ptr* self);
	[LinkName("QWidget_IsRightToLeft")]
	public static extern bool QWidget_IsRightToLeft(QWidget_Ptr* self);
	[LinkName("QWidget_IsLeftToRight")]
	public static extern bool QWidget_IsLeftToRight(QWidget_Ptr* self);
	[LinkName("QWidget_SetFocus")]
	public static extern void QWidget_SetFocus(QWidget_Ptr* self);
	[LinkName("QWidget_IsActiveWindow")]
	public static extern bool QWidget_IsActiveWindow(QWidget_Ptr* self);
	[LinkName("QWidget_ActivateWindow")]
	public static extern void QWidget_ActivateWindow(QWidget_Ptr* self);
	[LinkName("QWidget_ClearFocus")]
	public static extern void QWidget_ClearFocus(QWidget_Ptr* self);
	[LinkName("QWidget_SetFocus2")]
	public static extern void QWidget_SetFocus2(QWidget_Ptr* self, Qt_FocusReason reason);
	[LinkName("QWidget_FocusPolicy")]
	public static extern Qt_FocusPolicy QWidget_FocusPolicy(QWidget_Ptr* self);
	[LinkName("QWidget_SetFocusPolicy")]
	public static extern void QWidget_SetFocusPolicy(QWidget_Ptr* self, Qt_FocusPolicy policy);
	[LinkName("QWidget_HasFocus")]
	public static extern bool QWidget_HasFocus(QWidget_Ptr* self);
	[LinkName("QWidget_SetTabOrder")]
	public static extern void QWidget_SetTabOrder(QWidget_Ptr* param1, QWidget_Ptr* param2);
	[LinkName("QWidget_SetFocusProxy")]
	public static extern void QWidget_SetFocusProxy(QWidget_Ptr* self, QWidget_Ptr* focusProxy);
	[LinkName("QWidget_FocusProxy")]
	public static extern QWidget_Ptr* QWidget_FocusProxy(QWidget_Ptr* self);
	[LinkName("QWidget_ContextMenuPolicy")]
	public static extern Qt_ContextMenuPolicy QWidget_ContextMenuPolicy(QWidget_Ptr* self);
	[LinkName("QWidget_SetContextMenuPolicy")]
	public static extern void QWidget_SetContextMenuPolicy(QWidget_Ptr* self, Qt_ContextMenuPolicy policy);
	[LinkName("QWidget_GrabMouse")]
	public static extern void QWidget_GrabMouse(QWidget_Ptr* self);
	[LinkName("QWidget_GrabMouse2")]
	public static extern void QWidget_GrabMouse2(QWidget_Ptr* self, QCursor_Ptr* param1);
	[LinkName("QWidget_ReleaseMouse")]
	public static extern void QWidget_ReleaseMouse(QWidget_Ptr* self);
	[LinkName("QWidget_GrabKeyboard")]
	public static extern void QWidget_GrabKeyboard(QWidget_Ptr* self);
	[LinkName("QWidget_ReleaseKeyboard")]
	public static extern void QWidget_ReleaseKeyboard(QWidget_Ptr* self);
	[LinkName("QWidget_GrabShortcut")]
	public static extern c_int QWidget_GrabShortcut(QWidget_Ptr* self, QKeySequence_Ptr* key);
	[LinkName("QWidget_ReleaseShortcut")]
	public static extern void QWidget_ReleaseShortcut(QWidget_Ptr* self, c_int id);
	[LinkName("QWidget_SetShortcutEnabled")]
	public static extern void QWidget_SetShortcutEnabled(QWidget_Ptr* self, c_int id);
	[LinkName("QWidget_SetShortcutAutoRepeat")]
	public static extern void QWidget_SetShortcutAutoRepeat(QWidget_Ptr* self, c_int id);
	[LinkName("QWidget_MouseGrabber")]
	public static extern QWidget_Ptr* QWidget_MouseGrabber();
	[LinkName("QWidget_KeyboardGrabber")]
	public static extern QWidget_Ptr* QWidget_KeyboardGrabber();
	[LinkName("QWidget_UpdatesEnabled")]
	public static extern bool QWidget_UpdatesEnabled(QWidget_Ptr* self);
	[LinkName("QWidget_SetUpdatesEnabled")]
	public static extern void QWidget_SetUpdatesEnabled(QWidget_Ptr* self, bool enable);
	[LinkName("QWidget_GraphicsProxyWidget")]
	public static extern QGraphicsProxyWidget_Ptr* QWidget_GraphicsProxyWidget(QWidget_Ptr* self);
	[LinkName("QWidget_Update")]
	public static extern void QWidget_Update(QWidget_Ptr* self);
	[LinkName("QWidget_Repaint")]
	public static extern void QWidget_Repaint(QWidget_Ptr* self);
	[LinkName("QWidget_Update2")]
	public static extern void QWidget_Update2(QWidget_Ptr* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QWidget_Update3")]
	public static extern void QWidget_Update3(QWidget_Ptr* self, QRect_Ptr* param1);
	[LinkName("QWidget_Update4")]
	public static extern void QWidget_Update4(QWidget_Ptr* self, QRegion_Ptr* param1);
	[LinkName("QWidget_Repaint2")]
	public static extern void QWidget_Repaint2(QWidget_Ptr* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QWidget_Repaint3")]
	public static extern void QWidget_Repaint3(QWidget_Ptr* self, QRect_Ptr* param1);
	[LinkName("QWidget_Repaint4")]
	public static extern void QWidget_Repaint4(QWidget_Ptr* self, QRegion_Ptr* param1);
	[LinkName("QWidget_SetVisible")]
	public static extern void QWidget_SetVisible(QWidget_Ptr* self, bool visible);
	[LinkName("QWidget_SetHidden")]
	public static extern void QWidget_SetHidden(QWidget_Ptr* self, bool hidden);
	[LinkName("QWidget_Show")]
	public static extern void QWidget_Show(QWidget_Ptr* self);
	[LinkName("QWidget_Hide")]
	public static extern void QWidget_Hide(QWidget_Ptr* self);
	[LinkName("QWidget_ShowMinimized")]
	public static extern void QWidget_ShowMinimized(QWidget_Ptr* self);
	[LinkName("QWidget_ShowMaximized")]
	public static extern void QWidget_ShowMaximized(QWidget_Ptr* self);
	[LinkName("QWidget_ShowFullScreen")]
	public static extern void QWidget_ShowFullScreen(QWidget_Ptr* self);
	[LinkName("QWidget_ShowNormal")]
	public static extern void QWidget_ShowNormal(QWidget_Ptr* self);
	[LinkName("QWidget_Close")]
	public static extern bool QWidget_Close(QWidget_Ptr* self);
	[LinkName("QWidget_Raise")]
	public static extern void QWidget_Raise(QWidget_Ptr* self);
	[LinkName("QWidget_Lower")]
	public static extern void QWidget_Lower(QWidget_Ptr* self);
	[LinkName("QWidget_StackUnder")]
	public static extern void QWidget_StackUnder(QWidget_Ptr* self, QWidget_Ptr* param1);
	[LinkName("QWidget_Move")]
	public static extern void QWidget_Move(QWidget_Ptr* self, c_int x, c_int y);
	[LinkName("QWidget_Move2")]
	public static extern void QWidget_Move2(QWidget_Ptr* self, QPoint_Ptr* param1);
	[LinkName("QWidget_Resize")]
	public static extern void QWidget_Resize(QWidget_Ptr* self, c_int w, c_int h);
	[LinkName("QWidget_Resize2")]
	public static extern void QWidget_Resize2(QWidget_Ptr* self, QSize_Ptr* param1);
	[LinkName("QWidget_SetGeometry")]
	public static extern void QWidget_SetGeometry(QWidget_Ptr* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QWidget_SetGeometry2")]
	public static extern void QWidget_SetGeometry2(QWidget_Ptr* self, QRect_Ptr* geometry);
	[LinkName("QWidget_SaveGeometry")]
	public static extern void* QWidget_SaveGeometry(QWidget_Ptr* self);
	[LinkName("QWidget_RestoreGeometry")]
	public static extern bool QWidget_RestoreGeometry(QWidget_Ptr* self, void** geometry);
	[LinkName("QWidget_AdjustSize")]
	public static extern void QWidget_AdjustSize(QWidget_Ptr* self);
	[LinkName("QWidget_IsVisible")]
	public static extern bool QWidget_IsVisible(QWidget_Ptr* self);
	[LinkName("QWidget_IsVisibleTo")]
	public static extern bool QWidget_IsVisibleTo(QWidget_Ptr* self, QWidget_Ptr* param1);
	[LinkName("QWidget_IsHidden")]
	public static extern bool QWidget_IsHidden(QWidget_Ptr* self);
	[LinkName("QWidget_IsMinimized")]
	public static extern bool QWidget_IsMinimized(QWidget_Ptr* self);
	[LinkName("QWidget_IsMaximized")]
	public static extern bool QWidget_IsMaximized(QWidget_Ptr* self);
	[LinkName("QWidget_IsFullScreen")]
	public static extern bool QWidget_IsFullScreen(QWidget_Ptr* self);
	[LinkName("QWidget_WindowState")]
	public static extern void* QWidget_WindowState(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowState")]
	public static extern void QWidget_SetWindowState(QWidget_Ptr* self, void* state);
	[LinkName("QWidget_OverrideWindowState")]
	public static extern void QWidget_OverrideWindowState(QWidget_Ptr* self, void* state);
	[LinkName("QWidget_SizeHint")]
	public static extern QSize_Ptr QWidget_SizeHint(QWidget_Ptr* self);
	[LinkName("QWidget_MinimumSizeHint")]
	public static extern QSize_Ptr QWidget_MinimumSizeHint(QWidget_Ptr* self);
